[tool.poetry]
name = "pupil"
version = "0.1.0"
description = "Active learning platform"
authors = ["hadi-gharibi <hady.gharibi@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
faiss-cpu = "^1.7.2"
numpy = "^1.22.2"
PyYAML = "^6.0"
pytest = "^7.0.1"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
