[tool.poetry]
name = "pupil"
version = "0.2.0-alpha.0"
description = "Active learning platform"
authors = ["hadi-gharibi <hady.gharibi@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
faiss-cpu = "^1.7.2"
numpy = "^1.22.2"
PyYAML = "^6.0"
pytest = "^7.0.1"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
marshmallow-dataclass = "^8.5.3"
nptyping = "^1.4.4"
typeguard = "^2.13.3"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"
mypy = "^0.931"
pylint = "^2.12.2"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-docstrings = "^1.6.0"
tox = "^3.24.5"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.3"}
Sphinx = "^4.4.0"
rst-to-myst = {extras = ["sphinx"], version = "^0.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.poetry.extras]
docs = ["Sphinx"]